--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "start:dev": "nodemon server.js"
   },
   "author": "",
@@ -20,5 +20,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+	"engines" : {
+    "node" : "^10"
   }
 }
